@@ -8,10 +8,11 @@
 &SUBSPACE
    dimwann = 6   
    win_max =  0.0
-   start_mode_dis = 'center_projections'
+   start_mode_dis = 'randomized'
 /
 
 &LOCALIZATION
+   start_mode_wan = 'randomized'
    maxiter0_wan = 100
    maxiter1_wan = 1500
    ncg = 5    
