@@ -12,11 +12,11 @@
    win_max = 10.0  
    maxiter_dis = 500
    alpha_dis = 0.5      
-   start_mode_dis = 'center_projections'
+!   start_mode_dis = 'randomized'
 /
 
 &LOCALIZATION
-!   start_mode_wan = 'from_file'
+!   start_mode_wan = 'randomized'
    maxiter0_wan = 200, 
    alpha0_wan = 0.5
    maxiter1_wan = 1500, 
